home-automation/zwavejs2mqtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zwavejs2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      name: zwavejs2mqtt
  template:
    metadata:
      labels:
        name: zwavejs2mqtt
    spec:
      containers:
        - name: zwavejs2mqtt
          image: zwavejs/zwavejs2mqtt:1.1.0
          livenessProbe:
            failureThreshold: 12
            httpGet:
              httpHeaders:
                - name: Accept
                  value: text/plain
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          ports:
            - containerPort: 8091
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 512Mi
            requests:
              cpu: '1'
              memory: 400Mi
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
          volumeMounts:
            - mountPath: /dev/serial/by-id/usb-0658_0200-if00
              name: zwavestick
            - mountPath: /usr/src/app/store
              name: store            
            - mountPath: /config
              name: config
      nodeSelector:
        zwavejs: "true"
      tolerations:
        - key: 'node'
          operator: 'Equal'
          value: 'small'
          effect: 'NoSchedule'
      volumes:
        - name: zwavestick
          hostPath:
            path: /dev/serial/by-id/usb-0658_0200-if00
        - name: config
          configMap:
            name: zwavejs2mqtt
        - name: secrets
          secret:
            secretName: zwave
        - name: store
          persistentVolumeClaim:
            claimName: zwavejs2mqtt
