home-automation/zwavejs2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwavejs2mqtt
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    name: zwavejs2mqtt
